# MOS6502-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  TODO.txt  main.cpp
src/: CMakeLists.txt  MOS6502.cpp  MOS6502.h  abstraction.h  bimap.cpp  bimap.h  bimapping.cpp  bus.cpp  bus.h  calculator.h  emulator.cpp  emulator.h  exitcodes.h  instructions.h  mappings.h  memory.h  ram.cpp  ram.h
test/: CMakeLists.txt  arithmetic_ops.cpp  branch_ops.cpp  cpu_testing.cpp  inc_dec_ops.cpp  jump_ops.cpp  load_store_ops.cpp  logical_ops.cpp  register_transfer_ops.cpp  shift_ops.cpp  stack_ops.cpp  status_change_ops.cpp  system_ops.cpp
